-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 7.0.1
-
None
-
-
54af6bd5b (master)
File renaming is disabled for CMake projects. I have to select "Show in Explorer" and manually rename the file there which is inconvenient.
I get that it is because qt creator doesn't support automatic editing of CMakeFiles, but in my case that is unnecessary because I use globbing so any changes are automatically applied when I touch the CMakeFiles.
- relates to
-
QTCREATORBUG-26869 Qt Creator CMake support improvements
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-27538 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 473822,6 | CMakePM: Allow files to be renamed in project view | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |